testing-server-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: testing-server-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: testing-server
    spec:
      volumes:
        - name: secret-volume
          secret:
            secretName: testing-server-secret
      containers:
      - name: testing-server
        image: rutsky/testing-server:v0.1.12
        args:
        - --hostname=0.0.0.0
        - --port=8080
        - --htpasswd-file=/srv/secret/htpasswd
        - --token-secret-file=/srv/secret/token.secret
        - --worker-ssh-known-hosts=/srv/secret/worker-ssh-known-hosts-file
        - --worker-ssh-key=/srv/secret/worker-ssh-key
        - -l=DEBUG
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: secret-volume
          readOnly: true
          mountPath: /srv/secret
