testing-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: testing-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: testing-server
