testing-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testing-server
spec:
  rules:
  - host: cppcheck.rutsky.org
    http:
      paths:
      - path: /api
        backend:
          serviceName: testing-service
          servicePort: 80
